--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import './components/home';
+@import './components/site-nav';
 
-// * {
-//   box-sizing: border-box;
-// }
+site-wrapper {
+  display: flex
+}
